--- a/api2/package.json
+++ b/api2/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./src/server/index.js",
+    "start": "node ./src/app.js",
     "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js"
   },
   "keywords": [],
